# Ncoding

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bugs.md  flake.nix  phases.md  test_edit_mode.py
docs/: Command_dev.md  FileOperator_dev.md  narwhal_dev.md  ncoding.md  ncoding_prompt_example.md  tool_call_dev.md
src/: main.rs  main.rs.tmp
src/api/: README.md  client.rs
src/command/: README.md  agent_logs.rs  agent_skills.rs  checklist.rs  files_operator.rs  mod.rs  parser.rs  shell.rs  sub_agent_task.rs  syntax.rs  tool_call.rs
src/config/: README.md  loader.rs
src/prompt/: README.md  builder.rs
src/session/: README.md  backup.rs  manager.rs  mod.rs
src/tui/: README.md  app.rs  input.rs  mod.rs  model_panel.rs  render.rs  theme.rs
