[package]
name = "n-coding"
version = "0.1.0"
edition = "2021"
description = "A TUI-based coding agent for DeepSeek API with text-command system"

[dependencies]
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
kdl = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
url = "2"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"
